<resources>
    <string name="app_name">MotorcycleAp</string>
    <string name="action_settings">Settings</string>
    <string name="authors"><![CDATA[Alex & Ryan]]></string>
    <string name="settings_page_title">Settings</string>
    <string name="main_page_title">Main</string>
    <string name="stats_page_title">Rider Statistics</string>
    <string name="GPS_disabled">GPS is currently Disabled</string>
    <string name="GPS_message">Would you like to enable it?</string>
    <string name="location_success">Location services connected</string>
    <string name="location_disconnect">Location services suspended. Please reconnect</string>
    <string name="location_failure">Location services connection failed with code %s</string>
    <string name="currentSpeed_hint">Current Speed</string>
    <string name="backPSI_hint">Back Psi</string>
    <string name="frontPSI_hint">Front Psi</string>
    <string name="savebutton">SAVE</string>
    <string name="clear_button">CLEAR</string>
    <string name="bike_hint">Bike_hint</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="tires">Tires</string>
    <string name="UserName">UserName</string>
    <string name="saved">SAVED</string>
    <string name="cleared">Cleared</string>
    <string name="onMapCleared">Map Cleared</string>
    <string name="saveRide">Save Ride?</string>
    <string name="saveRideMessage">Would you like to save this ride?</string>
    <string name="rideStart">Ride Start</string>
    <string name="rideEnd">Ride End</string>
    <string name="ifEmptyFields">Please complete all the fields</string>
    <string name="current_lean_angle">Current Lean angle:</string>
    <string name="max_lean_angle">Max Lean Angle</string>
    <string name="maxlean">maxLean</string>
    <string name="time">Time</string>
    <string name="beginRide">Press Ride button to Begin Ride</string>
    <string name="AttachInst">Attach your phone to the bike \n With top edge parallel to the ground</string>
    <string name="leanLeft">← %s°</string>
    <string name="leanRight">%s°→</string>
</resources>
